ckad/kubernetes/05-Services-and-Networking/backend-app.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    app: myapp
    tier: backend
  name: backend-app
spec:
  containers:
  - image: nginx
    name: backend-app
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
