ckad/kubernetes/05-Services-and-Networking/nginx-web.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    name: nginx-web
    type: frontend
  name: nginx-web
spec:
  containers:
  - image: nginx
    name: nginx-web
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
