ckad/kubernetes/05-Services-and-Networking/statefulset-mysql-app.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: mysql
  name: statefulset-mysql
spec:
  replicas: 3
  serviceName: headless-service
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - image: mysql
        name: mysql
        resources: {}
