ckad/kubernetes/05-Services-and-Networking/nginxsvc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  generation: 2
  labels:
    app: nginxsvc
  name: nginxsvc
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginxsvc
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: nginxsvc
    spec:
      containers:
      - image: nginx
        imagePullPolicy: Always
        name: nginx
      restartPolicy: Always
      schedulerName: default-scheduler

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginxsvc
  name: nginxsvc
  namespace: default
spec:
  clusterIP: 10.105.243.91
  clusterIPs:
  - 10.105.243.91
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginxsvc
  sessionAffinity: None
  type: ClusterIP
