ckad/kubernetes/05-Services-and-Networking/service-definition-clusterip.yaml
apiVersion: v1
kind: Service
metadata: 
  name: backend-svc
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: myapp
    tier: backend
