ckad/kubernetes/05-Services-and-Networking/service-definition.yaml
apiVersion: v1
kind: Service
metadata:
  name: new-web-service
spec:
  type: NodePort
  ports:
    - targetPort: 80
      port: 80
      nodePort: 30008
  selector:
    app: nginx-web
    type: frontend
